src/bcplus/parser/detail/Scanner.2.cpp
/* Generated by re2c 0.13.5 on Wed Apr  2 23:50:20 2014 */
#line 1 "bcplus/parser/detail/Scanner.2.re2c"

#include <sstream>

#include <boost/filesystem.hpp>
#include <boost/filesystem/fstream.hpp>

#include "bcplus/parser/detail/Scanner.h"
#include "bcplus/parser/detail/lemon_parser.h"

#include "bcplus/Location.h"
#include "bcplus/parser/Token.h"

#include "bcplus/parser/detail/ScannerSource.h"
#include "bcplus/parser/detail/ScannerRawSource.h"
#include "bcplus/parser/detail/ScannerTokenSource.h"
#include "bcplus/parser/detail/ScannerFileSource.h"
#include "bcplus/parser/detail/ScannerBufferSource.h"

namespace u = babb::utils; 
namespace fs = boost::filesystem;

namespace bcplus {
namespace parser {
namespace detail {


#define BLK_INIT(s) \
	blk.str(s); \
	use_blk = true; \
	source->token() = source->cursor() + 1;

#define BLK_LINE \
	source->newline(); \
    blk.write(source->token(), (size_t)(source->cursor() - source->token())); \
	source->token() = source->cursor() + 1;		

#define BLK_FINISH(sz) \
	blk.write(source->token(), (size_t)(source->cursor() - source->token() - sz));

Token* Scanner::tokenize_notkw(ScannerRawSource* source) {
	if (source->eof()) return new Token(T_EOF, new ReferencedString("<EOF>"), source->loc(), source->loc());
	else if (!source->good()) return new Token(T_ERR_IO, new ReferencedString("<IO ERROR>"), source->loc(), source->loc());


	std::stringstream blk;
	int ret;
	Location begin;
	bool use_blk = false;
	size_t preskip = 0;
	size_t postskip = 0;

	int parens = 0;
	bool dbl_quote = false;
	bool sgl_quote = false;

	char const* marker;

re2c_start:
	marker = source->token() = source->cursor();
	begin = source->loc();

	
#line 66 "<stdout>"
{
	char yych;
	unsigned int yyaccept = 0;
	if (_cond < 6) {
		if (_cond < 3) {
			if (_cond < 1) {
				goto yyc_NORMAL;
			} else {
				if (_cond < 2) {
					goto yyc_DBL_STRING;
				} else {
					goto yyc_SGL_STRING;
				}
			}
		} else {
			if (_cond < 4) {
				goto yyc_COMMENT;
			} else {
				if (_cond < 5) {
					goto yyc_BLK_COMMENT;
				} else {
					goto yyc_ASP_GR;
				}
			}
		}
	} else {
		if (_cond < 9) {
			if (_cond < 7) {
				goto yyc_ASP_CP;
			} else {
				if (_cond < 8) {
					goto yyc_LUA_GR;
				} else {
					goto yyc_LUA_CP;
				}
			}
		} else {
			if (_cond < 11) {
				if (_cond < 10) {
					goto yyc_F2LP_GR;
				} else {
					goto yyc_F2LP_CP;
				}
			} else {
				if (_cond < 12) {
					goto yyc_ARG;
				} else {
					goto yyc_MACRO;
				}
			}
		}
	}
/* *********************************** */
yyc_ARG:

	if ((source->limit() - source->cursor()) < 2) source->fill(2);
	yych = *source->cursor();
	if (yych <= '&') {
		if (yych <= '\n') {
			if (yych <= 0x00) goto yyy3;
			if (yych <= '\t') goto yyy5;
		} else {
			if (yych == '"') goto yyy7;
			goto yyy5;
		}
	} else {
		if (yych <= ')') {
			if (yych <= '\'') goto yyy9;
			if (yych <= '(') goto yyy11;
			goto yyy13;
		} else {
			if (yych == ',') goto yyy15;
			goto yyy5;
		}
	}
yyy3:
	marker = source->cursor() + 1;
	++source->cursor();
	if ((yych = *source->cursor()) == ')') goto yyy17;
	if (yych == ',') goto yyy17;
#line 469 "bcplus/parser/detail/Scanner.2.re2c"
	{
													// Figure out why we're still here...
													if (parens > 0 ) {
														_cond = yycNORMAL;
														ret = T_ERR_PAREN_MISMATCH;
													} else if (sgl_quote || dbl_quote) {
														_cond = yycNORMAL;
														ret = T_ERR_UNTERMINATED_STRING;
													}else {
														_cond = yycNORMAL;
														ret = T_ERR_SYNTAX;
													}
													goto re2c_finish;
												}
#line 162 "<stdout>"
yyy5:
	marker = source->cursor() + 1;
	++source->cursor();
	if ((yych = *source->cursor()) == ')') goto yyy17;
	if (yych == ',') goto yyy17;
#line 483 "bcplus/parser/detail/Scanner.2.re2c"
	{												goto yyc_ARG;						}
#line 170 "<stdout>"
yyy7:
	marker = source->cursor() + 1;
	++source->cursor();
	if ((yych = *source->cursor()) == ')') goto yyy25;
	if (yych == ',') goto yyy25;
#line 455 "bcplus/parser/detail/Scanner.2.re2c"
	{ if (!sgl_quote) dbl_quote = !dbl_quote;		goto yyc_ARG;						}
#line 178 "<stdout>"
yyy9:
	marker = source->cursor() + 1;
	++source->cursor();
	if ((yych = *source->cursor()) == ')') goto yyy23;
	if (yych == ',') goto yyy23;
#line 456 "bcplus/parser/detail/Scanner.2.re2c"
	{ if (!dbl_quote) sgl_quote = !sgl_quote;		goto yyc_ARG;						}
#line 186 "<stdout>"
yyy11:
	marker = source->cursor() + 1;
	++source->cursor();
	if ((yych = *source->cursor()) == ')') goto yyy21;
	if (yych == ',') goto yyy21;
#line 421 "bcplus/parser/detail/Scanner.2.re2c"
	{ 
												  if (sgl_quote || dbl_quote) goto yyc_ARG;
												  if (!parens++) {
												  	ret = T_PAREN_L;						
													goto re2c_finish;
												  } else goto yyc_ARG;
												}
#line 200 "<stdout>"
yyy13:
	marker = source->cursor() + 1;
	++source->cursor();
	if ((yych = *source->cursor()) == ')') goto yyy19;
	if (yych == ',') goto yyy19;
#line 428 "bcplus/parser/detail/Scanner.2.re2c"
	{
												  if (sgl_quote || dbl_quote) goto yyc_ARG;
												  if (--parens <= 0) {
												    ret = T_PAREN_R;
													_cond = yycNORMAL;
													goto re2c_finish;
												  } else goto yyc_ARG;
												}
#line 215 "<stdout>"
yyy15:
	marker = source->cursor() + 1;
	++source->cursor();
	if ((yych = *source->cursor()) == ')') goto yyy17;
	if (yych == ',') goto yyy17;
#line 457 "bcplus/parser/detail/Scanner.2.re2c"
	{ 
												  if (!dbl_quote && !sgl_quote && !parens) {
													ret = T_COMMA;
													goto re2c_finish;
												  } else goto yyc_ARG;
												}
#line 228 "<stdout>"
yyy17:
	++source->cursor();
	source->cursor() = marker;
#line 463 "bcplus/parser/detail/Scanner.2.re2c"
	{ 
												  if (!parens && !sgl_quote && !dbl_quote) {
													ret = T_ARG;
												    goto re2c_finish;
												  } else goto yyc_ARG;
												}
#line 239 "<stdout>"
yyy19:
	++source->cursor();
	source->cursor() = marker;
#line 413 "bcplus/parser/detail/Scanner.2.re2c"
	{
												  if (sgl_quote || dbl_quote) goto yyc_ARG;
												  if (--parens <= 0) {
												    ret = T_PAREN_R;
													_cond = yycNORMAL;
													goto re2c_finish;
												  }
												}
#line 252 "<stdout>"
yyy21:
	++source->cursor();
	source->cursor() = marker;
#line 406 "bcplus/parser/detail/Scanner.2.re2c"
	{ 
												  if (sgl_quote || dbl_quote) goto yyc_ARG;
												  if (!parens++) {
												  	ret = T_PAREN_L;						
													goto re2c_finish;
												  } else goto yyc_ARG;
												}
#line 264 "<stdout>"
yyy23:
	++source->cursor();
	source->cursor() = marker;
#line 446 "bcplus/parser/detail/Scanner.2.re2c"
	{
												  if (!dbl_quote) { 
													sgl_quote = !sgl_quote;
													if (!sgl_quote) {
														ret = T_ARG;
												    	goto re2c_finish;
													} else goto yyc_ARG;
												  } else goto yyc_ARG;
												}
#line 278 "<stdout>"
yyy25:
	++source->cursor();
	source->cursor() = marker;
#line 437 "bcplus/parser/detail/Scanner.2.re2c"
	{
												  if (!sgl_quote) { 
													dbl_quote = !dbl_quote;
													if (!dbl_quote) {
														ret = T_ARG;
												    	goto re2c_finish;
													} else goto yyc_ARG;
												  } else goto yyc_ARG;
												}
#line 292 "<stdout>"
/* *********************************** */
yyc_ASP_CP:
	{
		static const unsigned char yybm[] = {
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0, 128,   0, 128, 128,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			128,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
		};
		if ((source->limit() - source->cursor()) < 2) source->fill(2);
		yych = *source->cursor();
		if (yych <= '\n') {
			if (yych <= 0x00) goto yyy29;
			if (yych <= '\t') goto yyy31;
			goto yyy34;
		} else {
			if (yych == ':') goto yyy33;
			goto yyy31;
		}
yyy29:
		++source->cursor();
#line 315 "bcplus/parser/detail/Scanner.2.re2c"
		{ 
												  BLK_FINISH(1);
												  ret = T_ERR_UNTERMINATED_ASP;			
												  _cond = yycNORMAL;
												  source->cursor()--;
												  goto re2c_finish;					
												}
#line 350 "<stdout>"
yyy31:
		++source->cursor();
yyy32:
#line 322 "bcplus/parser/detail/Scanner.2.re2c"
		{												goto yyc_ASP_CP;					}
#line 356 "<stdout>"
yyy33:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		if (yych == '-') goto yyy36;
		goto yyy32;
yyy34:
		++source->cursor();
#line 302 "bcplus/parser/detail/Scanner.2.re2c"
		{ BLK_LINE;										goto yyc_ASP_CP;					}
#line 366 "<stdout>"
yyy36:
		++source->cursor();
		if ((source->limit() - source->cursor()) < 7) source->fill(7);
		yych = *source->cursor();
		if (yybm[0+yych] & 128) {
			goto yyy36;
		}
		if (yych == 'e') goto yyy39;
yyy38:
		source->cursor() = source->marker();
		goto yyy32;
yyy39:
		yych = *++source->cursor();
		if (yych != 'n') goto yyy38;
		yych = *++source->cursor();
		if (yych != 'd') goto yyy38;
		yych = *++source->cursor();
		if (yych == '_') goto yyy44;
		if (yych == 'a') goto yyy38;
		goto yyy43;
yyy42:
		++source->cursor();
		if ((source->limit() - source->cursor()) < 3) source->fill(3);
		yych = *source->cursor();
yyy43:
		if (yych <= '\f') {
			if (yych == '\t') goto yyy42;
			if (yych <= '\n') goto yyy38;
			goto yyy42;
		} else {
			if (yych <= ' ') {
				if (yych <= 0x1F) goto yyy38;
				goto yyy42;
			} else {
				if (yych == 'a') goto yyy51;
				goto yyy38;
			}
		}
yyy44:
		yych = *++source->cursor();
		if (yych != 'a') goto yyy38;
		yych = *++source->cursor();
		if (yych != 's') goto yyy38;
		yych = *++source->cursor();
		if (yych != 'p') goto yyy38;
yyy47:
		++source->cursor();
		if (source->limit() <= source->cursor()) source->fill(1);
		yych = *source->cursor();
		if (yych <= '\f') {
			if (yych == '\t') goto yyy47;
			if (yych <= '\n') goto yyy38;
			goto yyy47;
		} else {
			if (yych <= ' ') {
				if (yych <= 0x1F) goto yyy38;
				goto yyy47;
			} else {
				if (yych != '.') goto yyy38;
			}
		}
		++source->cursor();
#line 304 "bcplus/parser/detail/Scanner.2.re2c"
		{ 
												  _cond = yycNORMAL; 
												  ret = T_ASP_CP; 
												  goto re2c_finish;					
												}
#line 435 "<stdout>"
yyy51:
		yych = *++source->cursor();
		if (yych != 's') goto yyy38;
		yych = *++source->cursor();
		if (yych != 'p') goto yyy38;
yyy53:
		++source->cursor();
		if (source->limit() <= source->cursor()) source->fill(1);
		yych = *source->cursor();
		if (yych <= '\f') {
			if (yych == '\t') goto yyy53;
			if (yych <= '\n') goto yyy38;
			goto yyy53;
		} else {
			if (yych <= ' ') {
				if (yych <= 0x1F) goto yyy38;
				goto yyy53;
			} else {
				if (yych != '.') goto yyy38;
			}
		}
		++source->cursor();
#line 310 "bcplus/parser/detail/Scanner.2.re2c"
		{ 
												  _cond = yycNORMAL; 
												  ret = T_ASP_CP; 
												  goto re2c_finish;					
												}
#line 464 "<stdout>"
	}
/* *********************************** */
yyc_ASP_GR:
	{
		static const unsigned char yybm[] = {
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0, 128,   0, 128, 128,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			128,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
		};
		if ((source->limit() - source->cursor()) < 8) source->fill(8);
		yych = *source->cursor();
		if (yych <= '\n') {
			if (yych <= 0x00) goto yyy59;
			if (yych <= '\t') goto yyy61;
			goto yyy64;
		} else {
			if (yych == '#') goto yyy63;
			goto yyy61;
		}
yyy59:
		++source->cursor();
#line 293 "bcplus/parser/detail/Scanner.2.re2c"
		{ 
												  BLK_FINISH(1);
												  ret = T_ERR_UNTERMINATED_ASP;			
												  _cond = yycNORMAL;
												  source->cursor()--;
												  goto re2c_finish;					
												}
#line 523 "<stdout>"
yyy61:
		++source->cursor();
yyy62:
#line 300 "bcplus/parser/detail/Scanner.2.re2c"
		{												goto yyc_ASP_GR;					}
#line 529 "<stdout>"
yyy63:
		yyaccept = 0;
		yych = *(source->marker() = ++source->cursor());
		if (yych == 'e') goto yyy66;
		goto yyy62;
yyy64:
		++source->cursor();
#line 284 "bcplus/parser/detail/Scanner.2.re2c"
		{ 
									 			  BLK_LINE;
												  goto yyc_ASP_GR;				
												}
#line 542 "<stdout>"
yyy66:
		yych = *++source->cursor();
		if (yych == 'n') goto yyy68;
yyy67:
		source->cursor() = source->marker();
		goto yyy62;
yyy68:
		yych = *++source->cursor();
		if (yych != 'd') goto yyy67;
		yych = *++source->cursor();
		if (yych != '_') goto yyy67;
		yych = *++source->cursor();
		if (yych != 'a') goto yyy67;
		yych = *++source->cursor();
		if (yych != 's') goto yyy67;
		yych = *++source->cursor();
		if (yych != 'p') goto yyy67;
yyy73:
		++source->cursor();
		if (source->limit() <= source->cursor()) source->fill(1);
		yych = *source->cursor();
		if (yybm[0+yych] & 128) {
			goto yyy73;
		}
		if (yych != '.') goto yyy67;
		++source->cursor();
#line 288 "bcplus/parser/detail/Scanner.2.re2c"
		{ 
										 		  _cond = yycNORMAL; 
										 		  ret = T_ASP_GR; 
										 		  goto re2c_finish;					
												}
#line 575 "<stdout>"
	}
/* *********************************** */
yyc_BLK_COMMENT:
	if ((source->limit() - source->cursor()) < 2) source->fill(2);
	yych = *source->cursor();
	if (yych <= '\n') {
		if (yych <= 0x00) goto yyy79;
		if (yych <= '\t') goto yyy81;
		goto yyy84;
	} else {
		if (yych == '*') goto yyy83;
		goto yyy81;
	}
yyy79:
	++source->cursor();
#line 275 "bcplus/parser/detail/Scanner.2.re2c"
	{ 
												  BLK_FINISH(1);
												  ret = T_ERR_UNTERMINATED_BLK_COMMENT;			
												  _cond = yycNORMAL;
												  source->cursor()--;
												  goto re2c_finish;					
												}
#line 599 "<stdout>"
yyy81:
	++source->cursor();
yyy82:
#line 282 "bcplus/parser/detail/Scanner.2.re2c"
	{												goto yyc_BLK_COMMENT;				}
#line 605 "<stdout>"
yyy83:
	yych = *++source->cursor();
	if (yych == '/') goto yyy86;
	goto yyy82;
yyy84:
	++source->cursor();
#line 264 "bcplus/parser/detail/Scanner.2.re2c"
	{ 
												  BLK_LINE;
												  blk << "% "; 
												  goto yyc_BLK_COMMENT;				
												}
#line 618 "<stdout>"
yyy86:
	++source->cursor();
#line 269 "bcplus/parser/detail/Scanner.2.re2c"
	{ 
												  BLK_FINISH(2);
												  _cond = yycNORMAL; 
												  ret = T_COMMENT; 
												  goto re2c_finish;					
												}
#line 628 "<stdout>"
/* *********************************** */
yyc_COMMENT:
	{
		static const unsigned char yybm[] = {
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128,   0, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
			128, 128, 128, 128, 128, 128, 128, 128, 
		};
		if ((source->limit() - source->cursor()) < 2) source->fill(2);
		yych = *source->cursor();
		if (yych <= 0x00) goto yyy90;
		if (yych == '\n') goto yyy93;
		goto yyy92;
yyy90:
		++source->cursor();
		yych = *source->cursor();
		goto yyy96;
yyy91:
#line 256 "bcplus/parser/detail/Scanner.2.re2c"
		{ 												goto yyc_COMMENT;					}
#line 678 "<stdout>"
yyy92:
		yych = *++source->cursor();
		goto yyy96;
yyy93:
		++source->cursor();
#line 250 "bcplus/parser/detail/Scanner.2.re2c"
		{ 
												  source->cursor()--; 
												  _cond = yycNORMAL; 
												  ret = T_COMMENT;			
												  goto re2c_finish;
												}
#line 691 "<stdout>"
yyy95:
		++source->cursor();
		if (source->limit() <= source->cursor()) source->fill(1);
		yych = *source->cursor();
yyy96:
		if (yybm[0+yych] & 128) {
			goto yyy95;
		}
		goto yyy91;
	}
/* *********************************** */
yyc_DBL_STRING:
	if ((source->limit() - source->cursor()) < 2) source->fill(2);
	yych = *source->cursor();
	if (yych <= '!') {
		if (yych <= 0x00) goto yyy99;
		if (yych == '\n') goto yyy105;
		goto yyy101;
	} else {
		if (yych <= '"') goto yyy102;
		if (yych == '\\') goto yyy104;
		goto yyy101;
	}
yyy99:
	++source->cursor();
yyy100:
#line 226 "bcplus/parser/detail/Scanner.2.re2c"
	{												goto yyc_DBL_STRING;				}
#line 720 "<stdout>"
yyy101:
	yych = *++source->cursor();
	goto yyy100;
yyy102:
	++source->cursor();
#line 220 "bcplus/parser/detail/Scanner.2.re2c"
	{ 
												  _cond = yycNORMAL; 
												  ret = T_STRING_LITERAL;	
												  postskip = 1;
												  goto re2c_finish;					
												}
#line 733 "<stdout>"
yyy104:
	yych = *++source->cursor();
	if (yych == '"') goto yyy107;
	goto yyy100;
yyy105:
	++source->cursor();
#line 218 "bcplus/parser/detail/Scanner.2.re2c"
	{ source->newline();				 			goto yyc_DBL_STRING; 				}
#line 742 "<stdout>"
yyy107:
	++source->cursor();
#line 219 "bcplus/parser/detail/Scanner.2.re2c"
	{ 												goto yyc_DBL_STRING; 				}
#line 747 "<stdout>"
/* *********************************** */
yyc_F2LP_CP:
	{
		static const unsigned char yybm[] = {
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0, 128,   0, 128, 128,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
